kubernetes/deployment/ingress-rules.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sympo-demo-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: sympo-demo-app
          servicePort: 8182
